# libpxc

./: BUILD.gn  libpxc.gyp
include/: pxc3dscan.h  pxc3dseg.h  pxcaddref.h  pxcbase.h  pxcblobconfiguration.h  pxcblobdata.h  pxcblobmodule.h  pxccalibration.h  pxccapture.h  pxccapturemanager.h  pxccursordata.h  pxcdefs.h  pxcemotion.h  pxcenhancedphoto.h  pxcenhancedvideo.h  pxcfaceconfiguration.h  pxcfacedata.h  pxcfacemodule.h  pxchandconfiguration.h  pxchandcursormodule.h  pxchanddata.h  pxchandmodule.h  pxcimage.h  pxcmetadata.h  pxcobjectrecognitionconfiguration.h  pxcobjectrecognitiondata.h  pxcobjectrecognitionmodule.h  pxcpersontrackingconfiguration.h  pxcpersontrackingdata.h  pxcpersontrackingmodule.h  pxcphoto.h  pxcpowerstate.h  pxcprojection.h  pxcsceneperception.h  pxcsensemanager.h  pxcsession.h  pxcstatus.h  pxcsyncpoint.h  pxctouchlesscontroller.h  pxctracker.h  (+2 more)
include/service/: pxcaudiosourceservice.h  pxcloggingservice.h  pxcpowerstateserviceclient.h  pxcschedulerservice.h  pxcserializableservice.h  pxcsessionservice.h  pxcsmartasyncimpl.h  pxcsyncpointservice.h
src/libpxc/: libpxc.cpp
